fix: harden Gradle and execution foundations